--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
       <img src="images/final-car.png" alt="Red Formula 1 car clipart" width="800px">
     </div>
   </div>
+  <div class="scroll-bounce">
+    <p>SCROLL TO CONTINUE</p>
+  </div>
   
   <div id="map">
     <div id="mapAnnotations">
@@ -93,7 +96,7 @@
           <img id="teamCountry" src="" alt="">
         </div>
       </div>
-      <button id="next1" onclick="next1()">View Next &#9660;</button>
+      <button class="next-button" id="next1" onclick="next1()">View Next &#9660;</button>
     </div>
 
     <svg id="map" height="700" width="900"></svg>
@@ -106,7 +109,7 @@
         Which teams are the top winners for the <span id="circuitBlank">_____</span> race? <br>
         <br>
         <span id="barDescText"> <strong><em>Click on a circuit on the map above to begin.</em></strong></span>
-        <button id="next2" onclick="next2()">View Next &#9660;</button>
+        <button class="next-button" id="next2" onclick="next2()">View Next &#9660;</button>
       </div>
     </div>
 
@@ -123,7 +126,7 @@
           id="lineEmpty">Here, we see the fastest lap times from that race for a certain year.
           Lap times are affected by a number of factors: tire type, fuel level,
           overall car build, track temperature, weather conditions, and other factors.</text> <br>
-        <button id="next3" onclick="next3()">View Next &#9660;</button>
+        <button class="next-button" id="next3" onclick="next3()">View Next &#9660;</button>
       </div>
     </div>
     <svg id="lineChart" height="500" width="800"></svg>
@@ -155,7 +158,7 @@
       </div>
       
 
-      <button id="top" onclick="topScroll()">Back to Top &#9650;</button>
+      <button class="next-button" id="top" onclick="topScroll()">Back to Top &#9650;</button>
     </div>
     <svg id="scatter" height="500" width="700"></svg>
   </div>
