dropLine external js file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://d3js.org/topojson.v3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/d3-geo-projection@4"></script>
+  <script src="scripts/createDropLine.js"></script>
 
   <link rel="icon" type="image/x-icon" href="/images/f1.png">
 
@@ -294,7 +295,7 @@
 
       wins_and_years.csv: total years driven and total wins for a driver
 
-      race_fastest_times.csv: fastest lap times for each race
+      races_fastest_times.csv: fastest lap times for each race
     */
 
 
@@ -471,43 +472,10 @@
 
         let bisect = d3.bisector((d) => d).left;
 
-        // *******************************************
-        // ***********FINISH CITATIONS - AMY*********
-        activeRegion.on('mousemove', function (evt) {
-          // Get mouse location
-          let location = d3.pointer(evt);
-          let x = location[0];
-          // Use "invert" on a scale to go from pixels back to data
-          let xYear = xScaleLine.invert(x);
-          console.log(keys)
-          // We use the bisector to find the index of the element that's closest to our xYear
-          let index = bisect(keys, xYear);
-          console.log(x, xYear, index)
-          // We can then get d, the data point that's closest
-          let d = Number(values[index-1]);
-          // From there, it's just a matter of updating positions using our scales like we've done for a while now
-          let xPos = xScaleLine(keys[index-1])+50;
-          let yPos = yScaleLine(values[index-1])+10;
-          console.log(d, xPos, d3.timeFormat('%M min %S sec')(d), Math.round((d/1000)/60) + " min " + ((d/1000)%60).toFixed(2) + " sec")
-
-          dropLine.attr('x1', xPos).attr('x2', xPos);
-          valueMarker.attr("cx",xPos).attr("cy",yPos);
-
-          label.text(Math.round((d/1000)/60) + " min " + ((d/1000)%60).toFixed(2) + " sec")
-            .style('fill', 'white');
-          if (xPos < lineGraphWidth / 2.0) { 
-            label.attr("x",xPos+10).attr("text-anchor","start");
-          }
-          else { 
-            label.attr("x",xPos-10).attr("text-anchor","end"); 
-          }
-          if (yPos > lineGraphHeight / 2.0) { 
-            label.attr("y",150);
-          }
-          else { 
-            label.attr("y",lineGraphHeight-100); 
-          }
-        })
+        // ******* EXTERNAL FUNCTION *****: createDropLine
+        // Credit to Prof. Jeff Rzeszotarski, taken from Lecture on September 29, 2021 (INFO 3300). Placed in a separate file and found in /scripts/createDropLine.js
+        createDropLine(activeRegion, dropLine, label, valueMarker, bisect, xScaleLine, keys, values, lineGraphWidth, lineGraphHeight)
+          
       }
     
 
