line breaks, fill underline

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <img src="images/the-teams.png" alt="The Teams" width="300px" class="imgTitle">
 
       <div class="bar-desc">
-        <span id="barDescText"> <em><strong>Click</strong> on a circuit on the map above to begin.</em></span> <br><br>
+        <span id="barDescText"> <em><strong>Click</strong> on a circuit on the map above to begin.</em><br><br></span>
         Let's now look at historical win counts for teams. Throughout F1's history, there have been
         teams who consistently dominate: Williams, Ferrari, McLaren, Mercedes, and currently Red Bull.
         <br><br>Here we can analyze which teams have dominated based on the circuit. Does their success depend on a
@@ -165,8 +165,7 @@
       <img src="images/the-speed.png" alt="The Speed" width="300px" class="imgTitle">
 
       <div id="lineText">
-        <span id="line-temp"><em><strong>Click</strong> on a circuit on the map above to view times.</em></span>
-        <br><br>
+        <span id="line-temp"><em><strong>Click</strong> on a circuit on the map above to view times.</em><br><br></span>
         How have lap times changed per race? Check out previous stats from the <text id="lineBlank">_____</text> race.
         <br><br> <text id="lineEmpty">Here, we see the fastest lap times from that race for a certain year.
           Lap times are affected by a number of factors: tire type, fuel level,
