--- a/index.html
+++ b/index.html
@@ -215,12 +215,14 @@
 
 
   <script>
+    // formatting for map
     const map = d3.select("svg#map");
     const mapHeight = map.attr("height");
     const mapWidth = map.attr("width");
     let circuitName = d3.select("text#circuitName");
     let circuitLocation = d3.select("text#circuitLocation");
 
+    // formatting for bar chart
     const barChart = d3.select("svg#barChart");
     const barHeight = barChart.attr("height");
     const barWidth = barChart.attr("width");
@@ -232,6 +234,7 @@
       .attr("transform", "translate(" + barMargins.left + "," + barMargins.top + ")")
       .attr("class", "barChartBackground");
 
+    // formatting for line chart
     const lineChart = d3.select("svg#lineChart");
     const lineHeight = lineChart.attr("height");
     const lineWidth = lineChart.attr("width");
@@ -252,7 +255,6 @@
     let leftGridlinesLine = d3.axisLeft(yScaleLine)
       .tickFormat(function (d) {
         return Math.round((d / 1000) / 60) + " min " + +((d / 1000) % 60).toFixed(1) + " sec"
-        // return d3.timeFormat('%M min %S sec')(d)
       });
     lineChartArea.append("g")
       .attr("class", "yAxisLine y axis")
@@ -276,7 +278,9 @@
       .attr('class', 'xGridLine x gridlines')
       .attr('transform', `translate(${lineMargins.left},${lineGraphHeight + lineMargins.top})`)
       .call(bottomGridlinesLine);
+    // end formatting for line chart
 
+    // scatter plot formatting
     const scatter = d3.select("svg#scatter");
     const scatterHeight = scatter.attr("height");
     const scatterWidth = scatter.attr("width");
@@ -338,8 +342,6 @@
       
       Then the files that were made by preprocessing in Jupyter, stored in data/edited_data/:
   
-      results_dataset.csv: This is a merge on the initial results csv (it's best to look at it) which has results for lap times, final position, etc., for every race result in the past. It contains the driver values separate from the teams (because many drivers drive for more than 1 team during their lifetime). Everything is in here you just might have to map/loop on it
-  
       first_place_instances.csv: Is the same as the above one but only has a result if the result was first place (I made this specifically for the scatterplot)
 
       wins_and_years.csv: total years driven and total wins for a driver
@@ -347,52 +349,40 @@
       races_fastest_times.csv: fastest lap times for each race
     */
 
-
     const requestData = async function () {
-      const combinedData = await d3.csv("data/edited_data/results_dataset.csv", d3.autoType);
-      console.log("all data", combinedData);
 
       const atlasData = await d3.json("data/world-countries.json");
-      console.log(atlasData);
 
       const winsYears = await d3.csv("data/edited_data/wins_and_years.csv", d3.autoType);
-      console.log("win and years", winsYears);
 
       const constructorData = await d3.csv("data/kaggle_data/constructors.csv", d3.autoType);
-      console.log("constructors", constructorData);
 
       const winData = await d3.csv("data/edited_data/first_place_instances.csv", d3.autoType);
-      console.log("wins", winData);
 
       const driverData = await d3.csv("data/kaggle_data/drivers.csv", d3.autoType);
-      console.log("drivers", driverData);
 
       const nationalityConvert = await d3.csv("data/countries_nationality.csv", d3.autoType);
 
       // This CSV has all the info about every previous circuit, some of which are not currently active but all should have data from the past [this is literally just the list of circuits, not connected w anything else]
       const circuits = await d3.csv("data/kaggle_data/circuits.csv", d3.autoType);
-      console.log("circuits", circuits);
 
-      // This CSV has all the info about every previous circuit, some of which are not currently active but all should have data from the past [this is literally just the list of circuits, not connected w anything else]
+      // This CSV has all the info about every RACE, meaning every race from every year (not just information about the circuit itself, like in circuits.csv)
       const races = await d3.csv("data/kaggle_data/races.csv", d3.autoType);
-      console.log("races", races);
 
       const fastestLaps = await d3.csv("data/edited_data/races_fastest_times.csv", d3.autoType);
-      console.log("fastest laps in race", fastestLaps);
 
       racesNcircuits = {}
       races.forEach(d => {
-        cId = d.circuitId
-        rId = d.raceId
+        cId = d.circuitId;
+        rId = d.raceId;
         if (!(cId in racesNcircuits)) {
-          racesNcircuits[cId] = [rId]
+          racesNcircuits[cId] = [rId];
         } else if (cId in racesNcircuits) {
           raceList = racesNcircuits[cId]
           raceList.indexOf(rId) === -1 ? raceList.push(rId) : console.log("This item already exists");
-          racesNcircuits[cId] = raceList
+          racesNcircuits[cId] = raceList;
         }
       })
-      console.log(racesNcircuits)
 
       let viewport = map.append("g");
       let countryMesh = topojson.mesh(atlasData, atlasData.objects.countries1);
@@ -414,6 +404,7 @@
         .scaleExtent([1, 10])
         .on("zoom", zoomTransform);
 
+      // Function: generate line chart based on given lap times
       function generateLineChart(dictYearLapTime) {
         document.getElementById("line-temp").textContent = "";
         const transitionTime = Object.keys(dictYearLapTime).length == 0 ? 0 : 3000
@@ -421,8 +412,7 @@
           "Here, the circuit does not have fastest lap times reported." : "Here, we see the fastest lap times from that race for a certain year. \
         Lap times are affected by a number of factors: tire type, fuel level, \
         overall car build, track temperature, weather conditions, and other factors.";
-        console.log(dictYearLapTime)
-        dataDict = []
+        dataDict = [];
         const toMilli = (min, sec) => (min * 60 + sec) * 1000;
 
         Object.keys(dictYearLapTime).forEach(function (key, index) {
@@ -529,28 +519,27 @@
 
 
       function lapTimeLine(circuitData) {
-        console.log(circuitData);
-        cId = circuitData.circuitId
-        cName = circuitData.name
-        raceList = racesNcircuits[cId]
-        console.log(raceList)
-        raceLapTimes = []
+        cId = circuitData.circuitId;
+        cName = circuitData.name;
+        raceList = racesNcircuits[cId];
+        raceLapTimes = [];
         raceList.forEach(rId => {
           const isRidPresent = fastestLaps.find((x) => x.raceId == rId)
           if (isRidPresent) {
-            lt = isRidPresent.fastestLapTime
-            year = (races.find((x) => x.raceId == rId)).year
-            raceLapTimes[year] = lt
+            lt = isRidPresent.fastestLapTime;
+            year = (races.find((x) => x.raceId == rId)).year;
+            raceLapTimes[year] = lt;
           }
         })
         if (raceLapTimes.length > 0) {
-          generateLineChart(raceLapTimes)
+          generateLineChart(raceLapTimes);
         }
         else {
-          generateLineChart([])
+          generateLineChart([]);
         }
       }
 
+      // Creating map tooltip (hovering text)
       let mapTooltip = viewport.append("g")
         .attr("id", "mapTooltipG")
         .style("visibility", "hidden")
@@ -562,7 +551,7 @@
         .style("fill", "white")
         .raise();
 
-
+      // Joining dots to show on map as circuit locations
       let circuitDots = viewport.selectAll("circle.circuit")
         .data(circuits)
         .join("circle")
@@ -615,6 +604,7 @@
         });
 
 
+      // Map zoom
       function zoomTransform({ transform }) {
         viewport.attr("transform", transform.toString());
         circuitDots.attr("r", 5 / transform.k);
@@ -624,6 +614,7 @@
       map.call(zoom);
       zoom.scaleTo(map, 1.4); //set initial zoom
 
+      // Populate the note to the left of the map with information about the current country, circuit name, and flag of that country
       function populateCircuitNote(circuitObject) {
         let countryTemp = circuitObject.country;
         let temp = "";
@@ -658,38 +649,14 @@
         document.getElementById("circuitLocation").textContent = `${circuitObject.location}, ${circuitObject.country}`;
       }
 
+      // Populating bar chart note (to the left of bar chart), depending on map item clicked
       function populateBarChartNote(circuitObject) {
         document.getElementById("circuitBlank").textContent = `${circuitObject.name}`;
         document.getElementById("barDescText").textContent = "";
       }
 
-      // bar chart
+      // Bar chart code
       circuitWins = {}
-      // combinedData.forEach(d => {
-      //   raceId = d.raceId;
-      //   race = races[raceId];
-      //   circuitId = race.circuitId;
-
-      //   if (d.positionOrder == 1) {
-      //     constructorId = d.constructorId;
-      //     if (circuitId in circuitWins) {
-      //       constructors = circuitWins[circuitId]
-      //       if (constructorId in constructors) {
-      //         constructors[constructorId] += 1;
-      //         circuitWins[circuitId] = constructors;
-      //       }
-      //       else {
-      //         constructors[constructorId] = 1;
-      //         circuitWins[circuitId] = constructors;
-      //       }
-      //     }
-      //     else {
-      //       constructors = {}
-      //       constructors[constructorId] = 1;
-      //       circuitWins[circuitId] = constructors;
-      //     }
-      //   }
-      // });
       winData.forEach(d => {
         circuitId = d.circuitId;
         constructorId = d.constructorId
@@ -714,7 +681,6 @@
           circuitWins[circuitId] = constructors;
         }
       });
-      console.log(circuitWins);
 
       let xScaleBar = d3.scaleBand().range([0, barChartWidth]);
       let yScaleBar = d3.scaleLinear().domain([0, 20]).range([barChartHeight, 0]);
@@ -741,23 +707,16 @@
 
       function generateBarChart(circuitObject) {
         circuitData = circuitWins[circuitObject.circuitId];
-        console.log(circuitData);
         var circuitDataKeys = Object.keys(circuitData);
 
         teams = []
         count = 0;
         circuitDataKeys.forEach(d => {
-          // constructorDataPoint = constructorData[d];
-          // console.log(constructorDataPoint);
-          // teamName = constructorDataPoint.constructorRef;
-          // console.log(teamName);
-          // nameArray = teamName.split("-");
           if (count < 10) {
             teams.push(circuitData[d][1]);
           }
           count += 1;
         });
-        console.log(teams);
 
         var winCounts = []
         circuitDataKeys.forEach((key) => {
@@ -799,14 +758,14 @@
           .style("stroke-width", 40)
           .style("stroke", "#c70c0c");
       }
+      // End bar chart code
 
-      // final chart - scatterplot
-      const yearExtent = [2, 21]
-      // d3.extent(winsYears, d => d.years); // 2 to 19
-      const winExtent = [1, 105]
-      // d3.extent(winsYears, d => d.wins); // 1 to 103 (some drivers have 0 but they wont be included here)
+      // Scatterplot code:
 
-      //scales
+      const yearExtent = [2, 21]  // 2 to 19 are the true values, but need padding
+      const winExtent = [1, 105] // 1 to 103 (some drivers have 0 but they wont be included here)
+
+      // Scales for scatterplot axes
       const yearScale = d3.scaleLinear()
         .domain(yearExtent)
         .range([0, scatterWidthA]);
@@ -839,7 +798,7 @@
         .attr('transform', `translate(${scatterMargins.left / 2 - 25}, ${scatterHeightA / 2 + 30}) rotate(-90)`)
         .style("fill", "white");
 
-      // creating tooltip
+      // Creating tooltip for scatter plot (on hover)
       let tooltip = scatterArea.append("g")
         .attr("id", "tooltipGTag")
         .style("visibility", "hidden")
@@ -888,6 +847,7 @@
         })
         .style("fill", "#c70c0c");
 
+      // Populating side note next to scatter plot depending on dot hovered over
       function populateDriverNote(driverObject) {
         let driverRefTemp = driverObject.driverRef;
         let fName = "";
@@ -922,6 +882,7 @@
     };
     requestData();
 
+    // Scrolling functions to move page down/up on button clicks
     function next1() {
       var area = document.getElementById("barChartArea");
       area.scrollIntoView({ behavior: 'smooth', block: 'center' });
